# SoundFlow

./: .gitmodules  CONTRIBUTING.md  README.md  SOUNDFLOW-THIRD-PARTY-NOTICES.txt  SoundFlow.sln
.github/workflows/: build-extensions-apm.yml  build-ffmpeg.yml  build-miniaudio.yml  release.yml
Codecs/SoundFlow.Codecs.FFMpeg/: FFmpegCodecFactory.cs  FFmpegDecoder.cs  FormatConvertingDecoder.cs  SoundFlow.Codecs.FFMpeg.csproj  SoundFlow.Codecs.FFMpeg.targets
Codecs/SoundFlow.Codecs.FFMpeg/Native/: FFmpeg.cs
Native/ffmpeg-codec/: CMakeLists.txt  soundflow-ffmpeg.c  soundflow-ffmpeg.h
Src/: SoundFlow.csproj  SoundFlow.targets
Src/Abstracts/: SoundComponent.cs
Src/Backends/MiniAudio/: Native.cs
Src/Backends/MiniAudio/Devices/: MiniAudioDevice.cs
Src/Modifiers/: ResamplerModifier.cs
Src/Structs/: Errors.cs
